    - Standardize output to stdout+stderr and make it parseable.

  [ Orion Poplawski ]
  * New upstream version (4.0.1.1):
    - Instead of using a hard-code DPI of 96, use local DPI settings for new
      sessions if not explicitly set in session profile (Fixes: #164).

  [ Daniel Lindgren ]
  * New upstream version (4.0.1.1):
    - Swedish translation update.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 22 Mar 2013 23:21:11 +0100

x2goclient (4.0.1.0-0~x2go1) unstable; urgency=low

  [ Frédéric Motte ]
  * New upstream version (4.0.1.0):
    - Add French translation file.

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.0):
    - Launching parec to init pulseaudio input only on Windows.
    - Hide profilecard area on broker authentication.
    - Fix ONMainWindow layout in broker mode.
    - Set passphrase for key to reverse SSH connection.
      Fix closing client after getting passphrase (Fixes: #137)
    - Support for recent cygwin API on Windows.
    - Add checkbox for -noclipboardprimary argument for internal vcxsrv.

  [ Mike Gabriel ]
  * New upstream version (4.0.1.0):
    - Fix position shifts of broker login widget on repetetive authentication
      failures. (Fixes: #71).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 22 Mar 2013 23:15:45 +0100

x2goclient (4.0.0.4-0~x2go1) unstable; urgency=low

  [ Clemens Lang ]
  * New upstream version (4.0.0.4):
    - Add scripts and additional files for building X2Go Client
      disk images for Mac OS X. (Fixes: #131).

  [ Mike Gabriel ]
  * New upstream version (4.0.0.4):
    - Update man page: Add broker relevant cmdline options.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 04 Mar 2013 05:46:16 +0100

x2goclient (4.0.0.3-0~x2go1) unstable; urgency=low

   * Fix version in version.h, VERSION and x2goplugin.rc.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 13 Feb 2013 14:37:24 +0100

x2goclient (4.0.0.2-0~x2go1) unstable; urgency=low
