@@ -62,6 +62,10 @@ x2goclient (4.0.1.1-0~x2go1) UNRELEASED; urgency=low
   * New upstream version (4.0.1.1):
     - Swedish translation update.
 
+  [ Ricardo Díaz Martín ]
+  * New upstream version (4.0.1.1):
+    - Update Spanish translation file.
+
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 22 Mar 2013 23:21:11 +0100
 
 x2goclient (4.0.1.0-0~x2go1) unstable; urgency=low
